Add disclaimer for example property listings

--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
       <div class="section-header">
         <h2 data-i18n="properties.heading">Featured Properties</h2>
         <p data-i18n="properties.subtitle">Explore stunning homes available for purchase or rent with Nexa</p>
+        <p style="font-size: 0.9em; font-style: italic; opacity: 0.8; margin-top: 0.5rem;">
+          <em>Note: These are example properties created for demonstration purposes as we build this platform. Real property listings coming soon!</em>
+        </p>
       </div>
 
       <div id="properties-grid" class="properties-grid">
